trunk/Archive2/b2/4397410ed4b324/output
main.cpp:10:8: error: class template partial specialization does not specialize any template argument; to define the primary template, remove the template argument list
struct A<T, W>
       ^~~~~~~
main.cpp:10:8: error: redefinition of 'A'
main.cpp:4:8: note: previous definition is here
struct A
       ^
2 errors generated.
